# qa_test_generator

./: .gitignore  README.md  implementedFeatures.md  pyproject.toml  pytest.ini  requirements.txt
data/: LDB-415.txt  UI-1050.txt  prompt_examples.json  user_story.txt  user_story2.txt
docs/: MANUAL_USUARIO.md  USER_MANUAL.md  architecture.md  implementedFeatures.md  technical_guide.md
docs/flowcharts/: README.md  arquitectura_general.md  flujo_completo_datos.md  flujo_test_cases.md  flujo_user_story.md  patron_abstract_factory.md  sistema_agentes_ia.md
src/: ai_generator.py  ai_generator2.py  config.py  file_handler.py  logger.py  main.py  output_handler.py
src/agents/: __init__.py  agent_factory.py  ai_generator.py  ai_generator1.py  base_agent.py  gemini_agent.py  generator_agent.py  openai_agent.py
src/cli/: __init__.py  interface.py
src/prompts/: __init__.py  base_prompt.py  translation_prompt.py  user_story_prompt.py
src/utils/: __init__.py  cache.py  metrics.py  output_handler.py  rate_limiter.py
src/workflows/: __init__.py  user_story_workflow.py  workflow_manager.py
tests/: README.md  __init__.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
